discuss go results for core placenta transcriptome

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -19,6 +19,7 @@
 \acrodef{GH}{growth hormone}
 \acrodef{PSG}{pregnancy-specific glycoprotein}
 \acrodef{PAG}{pregnancy-associated glycoprotein}
+\acrodef{GO}{Gene Ontology}
 
 %%% Local Variables:
 %%% mode: latex
