prep for genome biology submission

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -20,6 +20,7 @@
 \acrodef{PSG}{pregnancy-specific glycoprotein}
 \acrodef{PAG}{pregnancy-associated glycoprotein}
 \acrodef{GO}{Gene Ontology}
+\acrodef{FDR}{False Discovery Rate}
 
 %%% Local Variables:
 %%% mode: latex
