--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -4,6 +4,9 @@
 \setmainfont{FreeSans}
 \setsansfont{FreeSans}
 \setmonofont{FreeMono}
+\setmathrm{FreeSans}
+\setmathsf{FreeSans}
+\setmathtt{FreeSans}
 %\usepackage[letterpaper,left=1in,right=1in,top=1in,bottom=1in,headheight=14pt]{geometry}
 \usepackage[letterpaper]{geometry}
 \usepackage{url}
@@ -26,6 +29,7 @@
 \usepackage{longtable}
 \usepackage{pdflscape}
 \usepackage{amsmath}
+\usepackage{sfmath}
 \usepackage[backend=biber,natbib=true,hyperref=true,citestyle=numeric-comp,style=nature,autocite=inline]{biblatex}
 \addbibresource{references.bib}
 % \usepackage[noblocks,auth-sc]{authblk}
